--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+github.client.id=fb39e8e5b381abfec302
+github.client.secret=e15351ee957138a696e20e0ec15539fafc219bc2
+github.redirect.uri=http://localhost:8080/callback
